--- a/static/aboutUs.html
+++ b/static/aboutUs.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="scrollTopBtn.css">
     <link rel="stylesheet" href="navStyle.css">
     <link rel="stylesheet" href="footerStyle.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sofadi+One&display=swap"
-    rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sofadi+One&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="aboutUsStyle.css">
 </head>
 
@@ -101,7 +102,8 @@
     <section id="sec5">
         <div id="about-text">
             <h1>Want to visit us?</h1>
-            <p><a href="https://www.google.com/maps" target="_blank" title="Map">Street 14, Near London Eye, London, UK</a></p>
+            <p><a href="https://www.google.com/maps" target="_blank" title="Map">Street 14, Near London Eye, London,
+                    UK</a></p>
             <h1>Want to call us?</h1>
             <p><a href="#">+1 (222) 777 8888 </a></p>
             <p>Thanks for visiting our website!</p>
