--- a/static/footer.html
+++ b/static/footer.html
@@ -16,7 +16,7 @@
             <li><a href="#"><span id="footer-recipe">Recipe</span><span id="footer-master">Master</span></a></li>
             <li><a href="index.html">HOME</a></li>
             <li><a href="explore.html">EXPLORE</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="aboutUs.html">ABOUT US</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
         <hr>
