--- a/static/header.html
+++ b/static/header.html
@@ -13,7 +13,7 @@
             <li><a href="index.html"><span id="recipe">Recipe</span><span id="master">Master</span></a></li>
             <li><a href="index.html">HOME</a></li>
             <li><a href="explore.html">EXPLORE</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="aboutUs.html">ABOUT US</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li><a href="#"><li><a href="favorites.html"><i class="fas fa-heart"></i></a></li>
         </a></li>
