--- a/index.html
+++ b/index.html
@@ -3,44 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
-        }
-
-        .welcome-message {
-            text-align: center;
-        }
-
-        h1 {
-            color: #333;
-            font-size: 2.5rem;
-        }
-
-        p {
-            color: #555;
-            font-size: 1.2rem;
-        }
-    </style>
-    <script>
-        setTimeout(() => {
-            window.location.href = "static/index.html";
-        }, 1);
-    </script>
+    <meta http-equiv="refresh" content="0; url=https://repo.github.io/static/index.html">
+    <title>Document</title>
 </head>
 <body>
-    <div class="welcome-message">
-        <h1>Welcome to My Website</h1>
-        <p>Loading the next page...</p>
-    </div>
+    <h1>wwlw</h1>
 </body>
 </html>
